--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/AndroidManifest.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Home_Screen">
+        <activity android:name=".HomeScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +19,8 @@
         <activity android:name=".PreMatch" />
         <activity android:name=".PostMatch" />
         <activity android:name=".AutonTeleop" />
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".Settings" />
+        <activity android:name=".QRCreator"></activity>
     </application>
 
 </manifest>
