--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/AndroidManifest.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/AndroidManifest.xml
@@ -5,14 +5,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/avatar2_trans"
         android:label="Mukwonago WEARs"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/circle_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:testOnly="false"
-        android:debuggable="true"
-        tools:ignore="HardcodedDebugMode">
+        android:testOnly="false">
 
         <activity android:name=".HomeScreen">
             <intent-filter>
