--- a/Watching_Extremely_Awesome_Robots/WEARs/build.gradle
+++ b/Watching_Extremely_Awesome_Robots/WEARs/build.gradle
@@ -41,4 +41,5 @@ dependencies {
         compile 'com.android.support.constraint:constraint-layout:1.0.2'
         testCompile 'junit:junit:4.12'
     }
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
 }
