--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/AndroidManifest.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/avatar2_trans"
-        android:label="Mukwonago WEARs"
+        android:label="WEARs"
         android:roundIcon="@mipmap/circle_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
