--- a/Watching_Extremely_Awesome_Robots_safely/gradle/wrapper/gradle-wrapper.properties
+++ b/Watching_Extremely_Awesome_Robots_safely/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Mar 10 20:50:44 CST 2018
+#Mon Mar 26 22:04:41 CDT 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
