--- a/YaBoiinthePits/YaBointhePits/build.gradle
+++ b/YaBoiinthePits/YaBointhePits/build.gradle
@@ -4,11 +4,13 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "org.team930.bears.yaboiinthepits"
-        minSdkVersion 21
+        minSdkVersion 18
+        //noinspection OldTargetApi
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName '1.0.1'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionNameSuffix '1.0.'
     }
     buildTypes {
         release {
@@ -16,10 +18,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
