--- a/YaBoiinthePits/YaBointhePits/src/main/AndroidManifest.xml
+++ b/YaBoiinthePits/YaBointhePits/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         <activity android:name=".PitScouter" />
     </application>
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ManifestOrder" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+
 
 </manifest>
