--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
@@ -5,24 +5,30 @@ android {
         team930 {
             keyAlias 'team930'
             keyPassword '4786fear'
+            storeFile file('C:/Users/new/Desktop/git/Scouting App/app_keystore.jks')
+            storePassword '4786fear'
         }
     }
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "org.team930.bears.wearstime"
-        minSdkVersion 19
+        minSdkVersion 18
         //noinspection OldTargetApi
         targetSdkVersion 26
         versionCode 0
-        versionName "1.2.5"
+        versionName "1.3.1"
         multiDexEnabled true
         signingConfig signingConfigs.team930
     }
     buildTypes {
         release {
             signingConfig signingConfigs.team930
-            versionNameSuffix '1.2'
+        }
+        debug {
+            debuggable false
+            jniDebuggable false
+            signingConfig signingConfigs.team930
+            renderscriptDebuggable false
         }
     }
     productFlavors {
@@ -53,23 +59,30 @@ android {
             targetSdkVersion 26
             versionCode 0
             versionName '1.2.9'
-            versionNameSuffix '1.2'
+            versionNameSuffix ' Wisconsin Regional'
+        }
+        f131 {
+            signingConfig signingConfigs.team930
+            minSdkVersion 18
+            applicationId 'org.team930.bears.wearstime'
+            targetSdkVersion 26
+            versionCode 0
+            versionName '1.3.1'
+            versionNameSuffix ' Seven Rivers Regional'
         }
     }
 
 
     dependencies {
-        compile fileTree(dir: 'libs', include: ['*.jar'])
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
         //noinspection GradleDependency
-        compile 'com.android.support:appcompat-v7:26.1.0'
+        implementation 'com.android.support:appcompat-v7:26.1.0'
         //noinspection GradleDependency
-        compile 'com.android.support:multidex:1.0.3'
+        implementation 'com.android.support:multidex:1.0.3'
 
-        compile 'com.journeyapps:zxing-android-embedded:3.5.0'
+        implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
         //noinspection GradleDependency
-        compile 'com.google.zxing:core:3.3.0'
+        implementation 'com.google.zxing:core:3.3.0'
 
     }
-}
-dependencies {
 }
