--- a/YaBoiinthePits/YaBointhePits/build.gradle
+++ b/YaBoiinthePits/YaBointhePits/build.gradle
@@ -4,13 +4,13 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "org.team930.bears.yaboiinthepits"
-        minSdkVersion 18
+        minSdkVersion 14
         //noinspection OldTargetApi
-        targetSdkVersion 26
+        targetSdkVersion 23
         versionCode 1
-        versionName '1.0.1'
+        versionName '1.3.0'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        versionNameSuffix '1.0.'
+        versionNameSuffix ' Seven Rivers Regional'
     }
     buildTypes {
         release {
@@ -25,7 +25,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
