--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/AndroidManifest.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 
     <application
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@drawable/avatar2_trans"
         android:label="WEARs"
         android:roundIcon="@mipmap/ic_launcher_round"
