--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
@@ -9,6 +9,7 @@ android {
             storePassword '4786fear'
         }
     }
+
     compileSdkVersion 26
     defaultConfig {
         applicationId "org.team930.bears.wearstime"
@@ -32,35 +33,6 @@ android {
         }
     }
     productFlavors {
-        f125 {
-            minSdkVersion 18
-            applicationId 'org.team930.bears.wearstime'
-            signingConfig signingConfigs.team930
-            targetSdkVersion 26
-            versionCode 1
-            versionName '1.2.5'
-            versionNameSuffix '1.2'
-
-        }
-        f128 {
-            signingConfig signingConfigs.team930
-            minSdkVersion 18
-            applicationId 'org.team930.bears.wearstime'
-            targetSdkVersion 26
-            versionCode 1
-            versionName '1.2.8'
-            versionNameSuffix '1.2'
-        }
-
-        f129 {
-            signingConfig signingConfigs.team930
-            minSdkVersion 18
-            applicationId 'org.team930.bears.wearstime'
-            targetSdkVersion 26
-            versionCode 1
-            versionName '1.2.9'
-            versionNameSuffix ' Wisconsin Regional'
-        }
         f131 {
             signingConfig signingConfigs.team930
             minSdkVersion 18
@@ -69,6 +41,16 @@ android {
             versionCode 1
             versionName '1.3.1'
             versionNameSuffix ' Seven Rivers Regional'
+        }
+        deepSpaceBeta {
+            signingConfig signingConfigs.team930
+            minSdkVersion 18
+            applicationId 'org.team930.bears.wearstime'
+            targetSdkVersion 24
+            versionCode 1
+            versionName '2019.0.4'
+            versionNameSuffix '2019 WEARs Beta'
+            targetSdkVersion 24
         }
     }
 
@@ -85,4 +67,6 @@ android {
         implementation 'com.google.zxing:core:3.3.0'
 
     }
+}
+dependencies {
 }
