--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
@@ -12,7 +12,7 @@ android {
 
     compileSdkVersion 26
     defaultConfig {
-        applicationId "org.team930.bears.wearstime"
+        applicationId "org.team930.bears.wears"
         minSdkVersion 18
         //noinspection OldTargetApi
         targetSdkVersion 26
@@ -36,7 +36,7 @@ android {
         f131 {
             signingConfig signingConfigs.team930
             minSdkVersion 18
-            applicationId 'org.team930.bears.wearstime'
+            applicationId 'org.team930.bears.wears'
             targetSdkVersion 26
             versionCode 1
             versionName '1.3.1'
@@ -45,11 +45,11 @@ android {
         deepSpaceBeta {
             signingConfig signingConfigs.team930
             minSdkVersion 18
-            applicationId 'org.team930.bears.wearstime'
+            applicationId 'org.team930.bears.wears'
             targetSdkVersion 24
             versionCode 1
             versionName '2019.0.4'
-            versionNameSuffix '2019 WEARs Beta'
+            versionNameSuffix '  Beta'
             targetSdkVersion 24
         }
     }
