--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/AndroidManifest.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/app_icon"
+        android:icon="@drawable/better_app_icon"
         android:label="WEARs"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
