--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
@@ -52,6 +52,14 @@ android {
             versionNameSuffix '  Beta'
             targetSdkVersion 24
         }
+        deepSpace {
+            applicationId 'org.team930.bears.wears'
+            signingConfig signingConfigs.team930
+            targetSdkVersion 24
+            versionCode 2
+            versionName '2019.1.0'
+            versionNameSuffix ' IACF'
+        }
     }
 
 
