--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
@@ -57,8 +57,8 @@ android {
             signingConfig signingConfigs.team930
             targetSdkVersion 24
             versionCode 2
-            versionName '2019.1.1'
-            versionNameSuffix 'WIMI'
+            versionName '2019.1.4'
+            versionNameSuffix ' Detroit Championship 2019'
         }
     }
 
