--- a/YaBoiinthePits/YaBointhePits/build.gradle
+++ b/YaBoiinthePits/YaBointhePits/build.gradle
@@ -2,15 +2,16 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+    flavorDimensions "default"
     defaultConfig {
         applicationId "org.team930.bears.yaboiinthepits"
         minSdkVersion 18
         //noinspection OldTargetApi
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName '1.3.0'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        versionNameSuffix ' Seven Rivers Regional'
+        versionNameSuffix ''
     }
     buildTypes {
         release {
@@ -19,6 +20,13 @@ android {
         }
     }
     productFlavors {
+        detroit {
+            applicationId "org.team930.bears.yaboiinthepits"
+            minSdkVersion 18
+            targetSdkVersion 24
+            versionName '2019.0.1'
+            versionNameSuffix ' Detroit Championship 2019'
+        }
     }
 }
 
@@ -26,6 +34,6 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
