--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
@@ -10,15 +10,14 @@ android {
         }
     }
 
-    compileSdkVersion 26
+    compileSdkVersion 28
     defaultConfig {
         applicationId "org.team930.bears.wears"
         minSdkVersion 23
         //noinspection OldTargetApi
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.3.1"
-        multiDexEnabled true
         signingConfig signingConfigs.team930
     }
     buildTypes {
@@ -33,48 +32,33 @@ android {
         }
     }
     productFlavors {
-        f131 {
-            signingConfig signingConfigs.team930
-            minSdkVersion 18
-            applicationId 'org.team930.bears.wears'
-            targetSdkVersion 26
-            versionCode 1
-            versionName '1.3.1'
-            versionNameSuffix ' Seven Rivers Regional'
-        }
-        deepSpaceBeta {
-            signingConfig signingConfigs.team930
-            minSdkVersion 18
-            applicationId 'org.team930.bears.wears'
-            targetSdkVersion 24
-            versionCode 1
-            versionName '2019.0.4'
-            versionNameSuffix '  Beta'
-            targetSdkVersion 24
-        }
-        deepSpace {
-            applicationId 'org.team930.bears.wears'
-            signingConfig signingConfigs.team930
-            targetSdkVersion 24
-            versionCode 2
-            versionName '2019.1.4'
-            versionNameSuffix ' Detroit Championship 2019'
-        }
-    }
 
+    }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+    buildToolsVersion '28.0.3'
 
     dependencies {
         implementation fileTree(dir: 'libs', include: ['*.jar'])
-        //noinspection GradleDependency
-        implementation 'com.android.support:appcompat-v7:26.1.0'
-        //noinspection GradleDependency
-        implementation 'com.android.support:multidex:1.0.3'
+        //noinspection GradleCompatible,GradleDependency
+        def appcompat_version = "1.1.0"
 
+        implementation "androidx.appcompat:appcompat:$appcompat_version"
+        // For loading and tinting drawables on older versions of the platform
+        implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
+        implementation 'com.android.support:animated-vector-drawable:28.0.0'
+        implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+        implementation 'com.android.support:multidex:1.0.3'
         implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
         //noinspection GradleDependency
         implementation 'com.google.zxing:core:3.3.0'
-
     }
 }
+
 dependencies {
+
+    implementation files('libs/BlueAllianceAPIv1-v1.0.2-with-deps.jar')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
