--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/build.gradle
@@ -49,12 +49,12 @@ android {
         // For loading and tinting drawables on older versions of the platform
         implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
         implementation 'com.android.support:animated-vector-drawable:28.0.0'
-        implementation 'com.google.android.material:material:1.0.0'
+        implementation 'com.google.android.material:material:1.1.0'
         implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-        implementation 'com.android.support:multidex:1.0.3'
         implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
         //noinspection GradleDependency
         implementation 'com.google.zxing:core:3.3.0'
+        implementation 'com.android.support:percent:28.0.0'
     }
 }
 
