Added YBITP module

--- a/Team930Scouting/settings.gradle
+++ b/Team930Scouting/settings.gradle
@@ -1,4 +1,4 @@
-include ':WEARs'
+include ':WEARs', ':yaboiinthepits'
 include ':zxing-modified', ':sample', ':library'
 include ':integration'
 rootProject.name='Team-930-Scouting'
