--- a/Team930Scouting/WEARs/src/main/AndroidManifest.xml
+++ b/Team930Scouting/WEARs/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
         android:allowBackup="true"
         android:icon="@drawable/better_app_icon"
         android:label="@string/app_name"
+        android:largeHeap="true"
+        android:hardwareAccelerated="false"
         android:roundIcon="@drawable/better_app_icon_rounded"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
