--- a/Team930Scouting/yaboiinthepits/build.gradle
+++ b/Team930Scouting/yaboiinthepits/build.gradle
@@ -20,14 +20,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion = '28.0.3'
 
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.android.support:animated-vector-drawable:28.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+    //noinspection GradleDependency
+    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.android.support:percent:28.0.0'
 }
